--- a/css/styles.css
+++ b/css/styles.css
@@ -14,8 +14,34 @@ body {
   background-color: var(--white-text-color);
 }
 
+h1, h2, h3, p, ul {
+  padding: 0;
+  margin: 0;
+}
+
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 1158px;
+  padding-left: 15px;
+  padding-right: 15px;
+  /* outline: 1px solid tomato;
+  background-color: greenyellow; */
+}
+
 .list {
   list-style: none;
+}
+
+.container-header {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid var(--light-color-text-logo);
+}
+
+.main-nav {
+  display: flex;
+  align-items: center;
 }
 
 .logo {
@@ -33,7 +59,20 @@ body {
   color: var(--title-text-color);
 }
 
+.site-nav {
+  display: flex;
+  margin-left: 76px;
+}
+
+.site-nav .item:not(:last-child) {
+  margin-right: 40px;
+}
+
 .site-nav .link {
+  display: block;
+  padding-top: 24px;
+  padding-bottom: 24px;
+
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -43,7 +82,15 @@ body {
 }
 
 .address {
-  font-style: normal;
+  margin-left: auto;
+}
+
+.auth-nav {
+  display: flex;
+}
+
+.auth-nav .item + .item {
+  margin-left: 40px;
 }
 
 .auth-nav-link {
@@ -52,19 +99,27 @@ body {
   letter-spacing: 0.02em;
   color: var(--primary-text-color);
   text-decoration: none;
+  font-style: normal;
 }
 
-.site-nav-link:hover,
-.site-nav-link:focus {
+.site-nav .link:hover,
+.site-nav .link:focus {
   color: var(--active-link-color);
 }
 
 .hero {
+margin-bottom: 120px;
+
   text-align: center;
   background-color: var(--title-text-color);
 }
 
 .hero-title {
+  max-width: 496px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 48px;
+
   font-size: 56px;
   line-height: 1.07;
   letter-spacing: 0.02em;
@@ -72,6 +127,12 @@ body {
 }
 
 .hero-button {
+  display: inline-block;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  padding: 16px 32px;
+  min-width: 169px;
+
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
@@ -87,7 +148,27 @@ body {
   background-color: var(--active-link-color);
 }
 
+.benefits {
+margin-bottom: 120px;
+}
+
+.benefits-list {
+  display: flex;
+}
+
+.benefits-list .item {
+  width: calc((100% - 72px) / 4);
+  margin-right: 24px;
+}
+
+.benefits-list .item:last-child {
+  margin-right: 0;
+}
+
+
 .title {
+  margin-bottom: 8px;
+
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -101,7 +182,8 @@ body {
   letter-spacing: 0.02em;
 }
 
-.section-title {
+.section-title,
+.section-title-team {
   font-size: 36px;
   line-height: 1.11;
   letter-spacing: 0.02em;
@@ -110,13 +192,65 @@ body {
   color: var(--title-text-color);
 }
 
+.section-title.examples-work {
+  margin-bottom: 72px;
+}
+
+.container-examples {
+  display: flex;
+}
+
+.container-examples .item {
+  width: calc((100% - 48px) / 3);
+  margin-right: 24px;
+}
+
+.container-examples .item:last-child {
+  margin-right: 0;
+}
+
+.examples {
+  margin-bottom: 120px;
+}
+
+.section-title-team {
+  margin-bottom: 72px;
+}
+
+.container-team {
+  display: flex;
+}
+
+.container-team .item {
+  width: calc((100% - 72px) / 4);
+  margin-right: 24px;
+}
+
+.container-team .item:last-child {
+  margin-right: 0;
+}
+
 .team {
+  padding-top: 120px;
+  padding-bottom: 120px;
+
   background-color: var(--second-background-color);
 }
 
+.foto {
+  margin-bottom: 32px;
+}
+
 .footer {
+  padding-top: 100px;
+  padding-bottom: 100px;
+  
   background-color: var(--title-text-color);
   color: var(--light-color-text-logo);
+}
+
+.container-footer {
+  max-width: 264px;
 }
 
 .logo-footer {
@@ -127,16 +261,26 @@ body {
   font-size: 16px;
   line-height: 1.5;
   color: var(--light-color-text-logo);
+  margin-top: 16px;
 }
 
 /* Портфоліо */
 
 .filter {
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  margin-top: 96px;
+  margin-bottom: 72px;
+
   list-style: none;
 }
 
 .filter-button {
+  display: inline-block;
+  border: 1px solid var(--light-color-text-logo);
+  border-radius: 4px;
+  padding: 12px 24px;
+
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
@@ -148,8 +292,14 @@ body {
   cursor: pointer;
 }
 
+.filter .item:not(:last-child) {
+  margin-right: 24px;
+}
+
 .filter-button:hover,
 .filter-button:focus {
+  border: 1px solid transparent;
+
   color: var(--white-text-color);
   background-color: var(--active-link-color);
 }
@@ -158,4 +308,32 @@ body {
   color: var(--title-text-color);
   text-decoration: none;
   list-style: none;
+}
+
+.work-text {
+  padding-left: 16px;
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+.work-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 120px;
+}
+
+.work-list .item {
+  width: calc((100% - 48px) / 3);
+  margin-right: 24px;
+  margin-bottom: 48px;
+
+  border: 1px solid var(--light-color-text-logo);
+}
+
+.work-list .item:nth-child(3n) {
+  margin-right: 0;
+}
+
+.work-list .item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
 }
